--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
     "sass": "^1.63.6",
+    "sharp": "^0.32.4",
     "slick-carousel": "^1.8.1"
   }
 }
